--- a/src/Pokedex.css
+++ b/src/Pokedex.css
@@ -1,4 +1,4 @@
-.Pokedex-title {
+.Pokedex {
   text-align: center;
 }
 
@@ -6,4 +6,12 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+}
+
+.Pokedex-winner {
+  color: #4caf50;
+}
+
+.Pokedex-loser {
+  color: #e91e63;
 }
